--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -94,4 +94,8 @@
     <string name="battery_optimization_disabled">Otimização da bateria desativada</string>
     <string name="battery_optimization_enabled">Otimização da bateria ativada</string>
     <string name="preload_custom_tab">Pré-carregar a aba personalizada</string>
+    <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
+    <string name="javascript">Javascript</string>
+    <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
+    <string name="url">url</string>
 </resources>
