Update Indonesian translation

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,101 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="navigation_drawer_open">Buka laci navigasi</string>
-    <string name="navigation_drawer_close">Tutup laci navigasi</string>
-    <string name="action_settings">Pengaturan</string>
-    <string name="add_feed">Tambah feed</string>
-    <string name="title_activity_edit_feed">Berlangganan feed</string>
-    <string name="add_feed_search_hint">URL feed</string>
-    <string name="title">Judul</string>
-    <string name="save">Simpan</string>
-    <string name="empty_feed_top">Belum ada feed. Apakah anda ingin…</string>
-    <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Membuka</font> feed?]]></string>
-    <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Menambahkan</font> feed?]]></string>
-    <string name="search_feed_empty_hint">Masukkan alamat feed</string>
-    <string name="mark_as_read">Tandai sudah dibaca</string>
-    <string name="mark_as_unread">Tandai belum dibaca</string>
-    <string name="mark_all_as_read">Tandai semua dibaca</string>
-    <string name="edit_feed">Sunting feed</string>
-    <string name="delete_feed">Hapus feed</string>
-    <string name="show_all_items">Tampilkan semua item</string>
-    <string name="show_unread_items">Tampilkan item belum dibaca</string>
-    <string name="new_items_available">Item baru tersedia</string>
-    <string name="view">Tampilkan</string>
-    <string name="no_tag">Tidak ada tag</string>
-    <string name="notify_for_new_items">Beri tahu jika ada item baru</string>
-    <string name="dont_notify_for_new_items">Hentikan notifikasi</string>
-    <string name="toggle_read_status">Aktif/nonaktifkan status baca</string>
-    <string name="open_link_in_browser">Buka tautan di peramban</string>
-    <string name="open_enclosed_media">Buka media yang tertutup</string>
-    <string name="sync">Sinkron</string>
-    <string name="export_feeds_to_opml">Ekspor feed ke OPML</string>
-    <string name="import_feeds_from_opml">Impor feed dari OPML</string>
-    <string name="view_debug_log">Tampilkan log debug</string>
-    <string name="new_based_on_this">Baru berdasarkan ini</string>
-    <string name="indicator_for_mark_as_read">Indikator untuk tanda sudah dibaca</string>
-    <string name="share">Bagikan</string>
-    <string name="no_such_feed">Tidak ada feed yang ditemukan. Coba gunakan https.</string>
-    <string name="nothing_to_display">Tidak ada yang bisa ditampilkan!</string>
-    <string name="title_activity_settings">Pengaturan</string>
-    <string name="all_feeds">Semua feed</string>
-    <string name="sync_option_manually">Secara manual</string>
-    <string name="sync_option_every_15min">Setiap 15 menit</string>
-    <string name="sync_option_every_30min">Setiap 30 menit</string>
-    <string name="sync_option_every_hour">Setiap jam</string>
-    <string name="sync_option_every_3_hours">Setiap 3 jam</string>
-    <string name="sync_option_every_6_hours">Setiap 6 jam</string>
-    <string name="sync_option_every_12_hours">Setiap 12 jam</string>
-    <string name="sync_option_every_day">Setiap hari</string>
-    <string name="synchronization">Sinkronisasi</string>
-    <string name="only_on_wifi">Hanya pada WiFi</string>
-    <string name="show_thumbnails">Tampilkan thumbnail</string>
-    <string name="may_result_data_charges">Mungkin menambah penggunaan data seluler.</string>
-    <string name="only_when_charging">Hanya saat mengisi daya</string>
-    <string name="image_loading">Pemuatan gambar</string>
-    <string name="no_activity_for_link">Tidak ada aplikasi untuk membuka tautan</string>
-    <string name="check_for_updates">Periksa pembaruan</string>
-    <string name="on_startup">Saat mulai</string>
-    <string name="show_fab">Tampilkan tombol tindakan mengambang</string>
-    <string name="include_mobile_hotspots">Termasuk hotspot ponsel</string>
-    <string name="updated_feeds">Feed diperbarui</string>
-    <string name="selected">Dipilih</string>
-    <string name="notification_channel_name">Feed belum dibaca</string>
-    <string name="notification_channel_description">Notifikasi hanya ditampilkan untuk item yang belum dibaca</string>
-    <string name="open_in_reader">Pembaca</string>
-    <string name="open_in_webview">Webview</string>
-    <string name="open_in_default_browser">Peramban</string>
-    <string name="open_item_by_default_with">Buka item feed dengan</string>
-    <string name="open_links_with">Buka tautan dengan</string>
-    <string name="reader_settings">Pembaca</string>
-    <string name="open_link_in_web_view">Buka tautan di Webview</string>
-    <string name="max_feed_items">Jumlah maksimum item per feed</string>
-    <string name="could_not_load_url">Tidak bisa memuat URL</string>
-    <string name="theme_system">Ikuti sistem</string>
-    <string name="theme_automatic">Otomatis</string>
-    <string name="theme_day">Terang</string>
-    <string name="theme_night">Gelap</string>
-    <string name="theme">Tema</string>
-    <string name="sort_newest_first">Terbaru</string>
-    <string name="sort_oldest_first">Terlama</string>
-    <string name="sort">Urutkan</string>
-    <string name="send_bug_report">Kirim laporan bug</string>
-    <string name="no_email_client">Tidak bisa membuka aplikasi surel</string>
-    <string name="touch_to_play_video">Sentuh untuk memutar video</string>
-    <string name="open_feed">Buka feed</string>
-    <string name="mark_items_below_as_read">Tandai item di bawah sudah dibaca</string>
-    <string name="discovered_feeds_list">Daftar feed yang ditemukan</string>
-    <string name="toggle_tag_expansion">Aktif/nonaktifkan ekspansi tag</string>
-    <string name="battery_optimization">Pengoptimalan baterai</string>
-    <string name="battery_optimization_disabled">Pengoptimalan baterai dinonaktifkan</string>
-    <string name="battery_optimization_enabled">Pengoptimalan baterai diaktifkan</string>
-    <string name="preload_custom_tab">Pramuat custom tab</string>
-    <string name="mark_items_above_as_read">Tandai item di atas sebagai telah dibaca</string>
-    <string name="javascript">Javascript</string>
-    <string name="open_in_web_view">Buka dalam tampilan Web</string>
-    <string name="open_in_custom_tab">Tab kustom</string>
-    <string name="open_in_browser">Buka di browser</string>
-    <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
-    <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
-    <string name="tag">Tag</string>
-    <string name="url">URL</string>
+
+  <string name="navigation_drawer_open">Buka laci navigasi</string>
+  <string name="navigation_drawer_close">Tutup laci navigasi</string>
+  <string name="action_settings">Pengaturan</string>
+  <string name="add_feed">Tambah feed</string>
+  <string name="title_activity_edit_feed">Berlangganan feed</string>
+  <string name="url">URL</string>
+  <string name="tag">Tag</string>
+  <string name="add_feed_search_hint">URL feed</string>
+  <string name="title">Judul</string>
+
+  <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
+  <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
+  <string name="save">Simpan</string>
+  <string name="empty_feed_top">Belum ada feed. Apakah Anda ingin…</string>
+  <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Membuka</font> feed lain?]]></string>
+  <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Menambahkan</font> feed lagi?]]></string>
+  <string name="search_feed_empty_hint">Masukkan alamat feed</string>
+  <string name="mark_as_read">Tandai sudah dibaca</string>
+  <string name="mark_as_unread">Tandai belum dibaca</string>
+  <string name="mark_all_as_read">Tandai semua sudah dibaca</string>
+  <string name="edit_feed">Sunting feed</string>
+  <string name="delete_feed">Hapus feed</string>
+  <string name="show_all_items">Tampilkan semua item</string>
+  <string name="show_unread_items">Tampilkan yang belum dibaca</string>
+  <string name="new_items_available">Item baru tersedia</string>
+  <string name="view">Tampilkan</string>
+  <string name="no_tag">Tanpa tag</string>
+  <string name="notify_for_new_items">Beri tahu untuk item baru</string>
+  <string name="dont_notify_for_new_items">Setop notifikasi</string>
+  <string name="toggle_read_status">Aktif/nonaktifkan status baca</string>
+  <string name="open_link_in_browser">Buka tautan di peramban</string>
+  <string name="open_in_browser">Buka di peramban</string>
+  <string name="open_enclosed_media">Buka media yang tertutup</string>
+  <string name="sync">Sinkron</string>
+  <string name="export_feeds_to_opml">Ekspor feed ke OPML</string>
+  <string name="import_feeds_from_opml">Impor feed dari OPML</string>
+  <string name="view_debug_log">Tampilkan catatan awakutu</string>
+  <string name="new_based_on_this">Baru berdasarkan ini</string>
+  <string name="indicator_for_mark_as_read">Indikator untuk tandai sudah dibaca</string>
+  <string name="share">Bagikan</string>
+  <string name="no_such_feed">Tidak ada feed yang ditemukan. Coba gunakan https.</string>
+  <string name="nothing_to_display">Tidak ada yang ditampilkan!</string>
+  <string name="title_activity_settings">Pengaturan</string>
+  <string name="all_feeds">Semua feed</string>
+
+  <string name="sync_option_manually">Manual</string>
+  <string name="sync_option_every_15min">Setiap 15 menit</string>
+  <string name="sync_option_every_30min">Setiap 30 menit</string>
+  <string name="sync_option_every_hour">Setiap 1 jam</string>
+  <string name="sync_option_every_3_hours">Setiap 3 jam</string>
+  <string name="sync_option_every_6_hours">Setiap 6 jam</string>
+  <string name="sync_option_every_12_hours">Setiap 12 jam</string>
+  <string name="sync_option_every_day">Sehari sekali</string>
+
+  <string name="synchronization">Sinkronisasi</string>
+  <string name="only_on_wifi">Hanya pada WiFi</string>
+  <string name="show_thumbnails">Tampilkan thumbnail</string>
+  <string name="may_result_data_charges">Mungkin menambah penggunaan data seluler.</string>
+  <string name="only_when_charging">Hanya saat mengisi daya</string>
+  <string name="image_loading">Pemuatan gambar</string>
+  <string name="no_activity_for_link">Tidak ada aplikasi yang bisa membuka tautan ini</string>
+  <string name="check_for_updates">Periksa pembaruan</string>
+  <string name="on_startup">Saat mulai</string>
+  <string name="show_fab">Tampilkan tombol mengambang</string>
+  <string name="include_mobile_hotspots">Sertakan juga hotspot ponsel</string>
+  <string name="updated_feeds">Feed diperbarui</string>
+  <string name="selected">Dipilih</string>
+  <string name="notification_channel_name">Feed belum dibaca</string>
+  <string name="notification_channel_description">Notifikasi hanya ditampilkan untuk item yang belum dibaca</string>
+  <string name="open_in_reader">Pembaca</string>
+  <string name="open_in_webview">Web view</string>
+  <string name="open_in_default_browser">Peramban bawaan</string>
+  <string name="open_in_custom_tab">Custom tab</string>
+  <string name="open_item_by_default_with">Buka item dengan</string>
+  <string name="open_links_with">Buka tautan dengan</string>
+  <string name="reader_settings">Pembaca</string>
+  <string name="open_link_in_web_view">Buka tautan di Web view</string>
+  <string name="open_in_web_view">Buka di Web view</string>
+  <string name="max_feed_items">Jumlah maksimum item per feed</string>
+  <string name="could_not_load_url">Tidak bisa memuat URL</string>
+
+  <string name="theme_system">Ikuti sistem</string>
+  <string name="theme_automatic">Otomatis</string>
+  <string name="theme_day">Terang</string>
+  <string name="theme_night">Gelap</string>
+  <string name="theme">Tema</string>
+  <string name="sort_newest_first">Terbaru</string>
+  <string name="sort_oldest_first">Terlama</string>
+  <string name="sort">Urutkan</string>
+  <string name="send_bug_report">Kirim laporan bug</string>
+  <string name="no_email_client">Tidak bisa membuka aplikasi surel</string>
+  <string name="touch_to_play_video">Sentuh untuk memutar video</string>
+  <string name="javascript">Javascript</string>
+  <string name="open_feed">Buka feed</string>
+  <string name="mark_items_above_as_read">Tandai item di atas sudah dibaca</string>
+  <string name="mark_items_below_as_read">Tandai item di bawah sudah dibaca</string>
+  <string name="discovered_feeds_list">Daftar feed yang ditemukan</string>
+  <string name="toggle_tag_expansion">Aktif/nonaktifkan ekspansi tag</string>
+
+  <string name="battery_optimization">Pengoptimalan baterai</string>
+  <string name="battery_optimization_disabled">Pengoptimalan baterai dinonaktifkan</string>
+  <string name="battery_optimization_enabled">Pengoptimalan baterai diaktifkan</string>
+  <string name="preload_custom_tab">Pramuat custom tab</string>
+
 </resources>
