Added error reporting when trying to add a feed fails
Relates to #335 #216

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
   <string name="battery_optimization_enabled">Battery optimization enabled</string>
   <string name="preload_custom_tab">Preload custom tab</string>
 
+  <string name="failed_to_parse">Failed to parse %1$s</string>
+
 </resources>
