Updated Spanish translation using Weblate
Currently translated at 100.0% (99 of 99 strings)

Co-authored-by: El Pirujo <boina@disroot.org>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/es/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,101 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="navigation_drawer_open">Abrir cajón de navegación</string>
-  <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
-  <string name="action_settings">Configuraciones</string>
-  <string name="add_feed">Añadir canal</string>
-  <string name="title_activity_edit_feed">Suscribir a un canal</string>
-  <string name="url">URL</string>
-  <string name="tag">Etiqueta</string>
-  <string name="add_feed_search_hint">URL del canal</string>
-  <string name="title">Título</string>
-  <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
-  <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
-  <string name="save">Guardar</string>
-  <string name="empty_feed_top">No hay nada para leer aquí. ¿le gustaría…</string>
-  <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Abrir</font> otro canal?]]></string>
-  <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Añadir</font> más canales?]]></string>
-  <string name="search_feed_empty_hint">Escribir la dirección de un canal</string>
-  <string name="mark_as_read">Marcar como leído</string>
-  <string name="mark_as_unread">Marcar como no leído</string>
-  <string name="mark_all_as_read">Marcar todo como leído</string>
-  <string name="edit_feed">Editar canal</string>
-  <string name="delete_feed">Borrar canal</string>
-  <string name="show_all_items">Mostrar todos las entradas</string>
-  <string name="show_unread_items">Mostrar entradas no leídas</string>
-  <string name="new_items_available">Nuevas entradas disponibles</string>
-  <string name="view">Ver</string>
-  <string name="no_tag">Sin etiqueta</string>
-  <string name="notify_for_new_items">Notificar de entradas nuevas</string>
-  <string name="dont_notify_for_new_items">Detener notificaciones</string>
-  <string name="toggle_read_status">Cambiar el estado de lectura</string>
-  <string name="open_link_in_browser">Abrir enlace en navegador</string>
-  <string name="open_in_browser">Abrir en navegador</string>
-  <string name="open_enclosed_media">Abrir medio adjunto</string>
-  <string name="sync">Sincronizar</string>
-  <string name="export_feeds_to_opml">Exportar canales a OPML</string>
-  <string name="import_feeds_from_opml">Importar canales de OPML</string>
-  <string name="view_debug_log">Ver traza de depuración</string>
-  <string name="new_based_on_this">Nuevo basado en este</string>
-  <string name="indicator_for_mark_as_read">Indicador para marcar como leído</string>
-  <string name="share">Compartir</string>
-  <string name="no_such_feed">No se puedo encontrar el canal. Pruebe usando https.</string>
-  <string name="nothing_to_display">¡Nada que mostrar!</string>
-  <string name="title_activity_settings">Configuraciones</string>
-  <string name="all_feeds">Todos los canales</string>
-  <string name="sync_option_manually">Manualmente</string>
-  <string name="sync_option_every_15min">Cada 15 minutos</string>
-  <string name="sync_option_every_30min">Cada 30 minutos</string>
-  <string name="sync_option_every_hour">Cada hora</string>
-  <string name="sync_option_every_3_hours">Cada 3 horas</string>
-  <string name="sync_option_every_6_hours">Cada 6 horas</string>
-  <string name="sync_option_every_12_hours">Cada 12 horas</string>
-  <string name="sync_option_every_day">Cada día</string>
-  <string name="synchronization">Sincronización</string>
-  <string name="only_on_wifi">Solo con WiFi</string>
-  <string name="show_thumbnails">Mostrar miniaturas</string>
-  <string name="may_result_data_charges">Puede que se apliquen cargos por consumo de datos.</string>
-  <string name="only_when_charging">Solo cuando se está cargando</string>
-  <string name="image_loading">Cargando imagen</string>
-  <string name="no_activity_for_link">No se encontró ninguna actividad con la que abrir el enlace</string>
-  <string name="check_for_updates">Comprobar actualizaciones</string>
-  <string name="on_startup">Al arrancar</string>
-  <string name="show_fab">Mostrar botón flotante</string>
-  <string name="include_mobile_hotspots">Incluir puntos de acceso móviles</string>
-  <string name="updated_feeds">Canales actualizados</string>
-  <string name="selected">Seleccionado</string>
-  <string name="notification_channel_name">Entradas no leídas</string>
-  <string name="notification_channel_description">Notificaciones solo se muestran para elementos no leídos canales configurados</string>
-  <string name="open_in_reader">Lector</string>
-  <string name="open_in_webview">Vista Web</string>
-  <string name="open_in_default_browser">Navegador por defecto</string>
-  <string name="open_in_custom_tab">Pestaña personalizada</string>
-  <string name="open_item_by_default_with">Por defecto abrir elementos con</string>
-  <string name="open_links_with">Abrir enlaces con</string>
-  <string name="reader_settings">Lector</string>
-  <string name="open_link_in_web_view">Abrir enlace en vista Web</string>
-  <string name="open_in_web_view">Abrir en vista Web</string>
-  <string name="max_feed_items">Número máximo de entradas por canal</string>
-  <string name="could_not_load_url">No se pudo cargar la URL</string>
-  <string name="theme_system">Tema del sistema</string>
-  <string name="theme_automatic">Automático</string>
-  <string name="theme_day">Día</string>
-  <string name="theme_night">Noche</string>
-  <string name="theme">Tema</string>
-  <string name="sort_newest_first">El más nuevo primero</string>
-  <string name="sort_oldest_first">El más antiguo primero</string>
-  <string name="sort">Ordenar por</string>
-  <string name="send_bug_report">Enviar informe de error</string>
-  <string name="no_email_client">No se puede abrir un cliente de correo</string>
-  <string name="touch_to_play_video">Tocar para reproducir vídeo</string>
-  <string name="javascript">Javascript</string>
-  <string name="open_feed">Abrir canal</string>
-  <string name="mark_items_above_as_read">Marcar anteriores como leídos</string>
-  <string name="mark_items_below_as_read">Marcar siguientes como leídos</string>
-  <string name="discovered_feeds_list">Lista de canales descubiertos</string>
-  <string name="toggle_tag_expansion">Alternar expansión de etiquetas</string>
-  <string name="battery_optimization">Optimización de batería</string>
-  <string name="battery_optimization_disabled">Optimización de batería deshabilitada</string>
-  <string name="battery_optimization_enabled">Optimización de batería habilitada</string>
-  <string name="preload_custom_tab">Precargar pestaña personalizada</string>
+    <string name="navigation_drawer_open">Abrir cajón de navegación</string>
+    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
+    <string name="action_settings">Configuraciones</string>
+    <string name="add_feed">Añadir canal</string>
+    <string name="title_activity_edit_feed">Suscribir a un canal</string>
+    <string name="url">URL</string>
+    <string name="tag">Etiqueta</string>
+    <string name="add_feed_search_hint">URL del canal</string>
+    <string name="title">Título</string>
+    <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
+    <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
+    <string name="save">Guardar</string>
+    <string name="empty_feed_top">No hay nada para leer aquí. ¿le gustaría…</string>
+    <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Abrir</font> otro canal?]]></string>
+    <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Añadir</font> más canales?]]></string>
+    <string name="search_feed_empty_hint">Escribir la dirección de un canal</string>
+    <string name="mark_as_read">Marcar como leído</string>
+    <string name="mark_as_unread">Marcar como no leído</string>
+    <string name="mark_all_as_read">Marcar todo como leído</string>
+    <string name="edit_feed">Editar canal</string>
+    <string name="delete_feed">Borrar canal</string>
+    <string name="show_all_items">Mostrar todos las entradas</string>
+    <string name="show_unread_items">Mostrar entradas no leídas</string>
+    <string name="new_items_available">Nuevas entradas disponibles</string>
+    <string name="view">Ver</string>
+    <string name="no_tag">Sin etiqueta</string>
+    <string name="notify_for_new_items">Notificar de entradas nuevas</string>
+    <string name="dont_notify_for_new_items">Detener notificaciones</string>
+    <string name="toggle_read_status">Cambiar el estado de lectura</string>
+    <string name="open_link_in_browser">Abrir enlace en navegador</string>
+    <string name="open_in_browser">Abrir en navegador</string>
+    <string name="open_enclosed_media">Abrir medio adjunto</string>
+    <string name="sync">Sincronizar</string>
+    <string name="export_feeds_to_opml">Exportar canales a OPML</string>
+    <string name="import_feeds_from_opml">Importar canales de OPML</string>
+    <string name="view_debug_log">Ver traza de depuración</string>
+    <string name="new_based_on_this">Nuevo basado en este</string>
+    <string name="indicator_for_mark_as_read">Indicador para marcar como leído</string>
+    <string name="share">Compartir</string>
+    <string name="no_such_feed">No se puedo encontrar el canal. Pruebe usando https.</string>
+    <string name="nothing_to_display">¡Nada que mostrar!</string>
+    <string name="title_activity_settings">Configuraciones</string>
+    <string name="all_feeds">Todos los canales</string>
+    <string name="sync_option_manually">Manualmente</string>
+    <string name="sync_option_every_15min">Cada 15 minutos</string>
+    <string name="sync_option_every_30min">Cada 30 minutos</string>
+    <string name="sync_option_every_hour">Cada hora</string>
+    <string name="sync_option_every_3_hours">Cada 3 horas</string>
+    <string name="sync_option_every_6_hours">Cada 6 horas</string>
+    <string name="sync_option_every_12_hours">Cada 12 horas</string>
+    <string name="sync_option_every_day">Cada día</string>
+    <string name="synchronization">Sincronización</string>
+    <string name="only_on_wifi">Solo con WiFi</string>
+    <string name="show_thumbnails">Mostrar miniaturas</string>
+    <string name="may_result_data_charges">Puede que se apliquen cargos por consumo de datos.</string>
+    <string name="only_when_charging">Solo cuando se está cargando</string>
+    <string name="image_loading">Cargando imagen</string>
+    <string name="no_activity_for_link">No se encontró ninguna actividad con la que abrir el enlace</string>
+    <string name="check_for_updates">Comprobar actualizaciones</string>
+    <string name="on_startup">Al arrancar</string>
+    <string name="show_fab">Mostrar botón flotante</string>
+    <string name="include_mobile_hotspots">Incluir puntos de acceso móviles</string>
+    <string name="updated_feeds">Canales actualizados</string>
+    <string name="selected">Seleccionado</string>
+    <string name="notification_channel_name">Entradas no leídas</string>
+    <string name="notification_channel_description">Notificaciones solo se muestran para elementos no leídos canales configurados</string>
+    <string name="open_in_reader">Lector</string>
+    <string name="open_in_webview">Vista Web</string>
+    <string name="open_in_default_browser">Navegador por defecto</string>
+    <string name="open_in_custom_tab">Pestaña personalizada</string>
+    <string name="open_item_by_default_with">Por defecto abrir elementos con</string>
+    <string name="open_links_with">Abrir enlaces con</string>
+    <string name="reader_settings">Lector</string>
+    <string name="open_link_in_web_view">Abrir enlace en vista Web</string>
+    <string name="open_in_web_view">Abrir en vista Web</string>
+    <string name="max_feed_items">Número máximo de entradas por canal</string>
+    <string name="could_not_load_url">No se pudo cargar la URL</string>
+    <string name="theme_system">Tema del sistema</string>
+    <string name="theme_automatic">Automático</string>
+    <string name="theme_day">Día</string>
+    <string name="theme_night">Noche</string>
+    <string name="theme">Tema</string>
+    <string name="sort_newest_first">El más nuevo primero</string>
+    <string name="sort_oldest_first">El más antiguo primero</string>
+    <string name="sort">Ordenar por</string>
+    <string name="send_bug_report">Enviar informe de error</string>
+    <string name="no_email_client">No se puede abrir un cliente de correo</string>
+    <string name="touch_to_play_video">Tocar para reproducir vídeo</string>
+    <string name="javascript">Javascript</string>
+    <string name="open_feed">Abrir canal</string>
+    <string name="mark_items_above_as_read">Marcar anteriores como leídos</string>
+    <string name="mark_items_below_as_read">Marcar siguientes como leídos</string>
+    <string name="discovered_feeds_list">Lista de canales descubiertos</string>
+    <string name="toggle_tag_expansion">Alternar expansión de etiquetas</string>
+    <string name="battery_optimization">Optimización de batería</string>
+    <string name="battery_optimization_disabled">Optimización de batería deshabilitada</string>
+    <string name="battery_optimization_enabled">Optimización de batería habilitada</string>
+    <string name="preload_custom_tab">Precargar pestaña personalizada</string>
+    <string name="failed_to_parse">Fallo al analizar %1$s</string>
 </resources>
