Updated Italian translation using Weblate
Currently translated at 100.0% (99 of 99 strings)

Updated French translation using Weblate

Currently translated at 100.0% (99 of 99 strings)

Updated German translation using Weblate

Currently translated at 100.0% (99 of 99 strings)

Co-authored-by: J. Lavoie <j.lavoie@net-c.ca>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/de/
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/fr/
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/it/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -98,4 +98,5 @@
     <string name="battery_optimization_disabled">Nicht optimiert</string>
     <string name="battery_optimization_enabled">Optimiert</string>
     <string name="preload_custom_tab">Standard-Registerkarte vorladen</string>
+    <string name="failed_to_parse">Fehler beim Analysieren %1$s</string>
 </resources>
