--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -98,4 +98,5 @@
     <string name="javascript">Javascript</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
     <string name="url">URL</string>
+    <string name="failed_to_parse">Impossibile analizzare %1$s</string>
 </resources>
