Updated Norwegian Bokmål translation using Weblate
Currently translated at 100.0% (99 of 99 strings)

Co-authored-by: Allan Nordhøy <epost@anotheragency.no>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/nb_NO/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-no/strings.xml
+++ b/app/src/main/res/values-no/strings.xml
@@ -98,4 +98,5 @@
     <string name="open_in_reader">Leser</string>
     <string name="check_for_updates">Se etter oppdateringer</string>
     <string name="may_result_data_charges">Mobildatakostnader kan påløpe.</string>
+    <string name="failed_to_parse">Klarte ikke å tolke %1$s</string>
 </resources>
