Updated Polish translation using Weblate
Currently translated at 100.0% (99 of 99 strings)

Co-authored-by: WaldiS <sto@tutanota.de>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/pl/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -98,4 +98,5 @@
     <string name="battery_optimization_disabled">Optymalizacja baterii wyłączona</string>
     <string name="battery_optimization_enabled">Optymalizacja baterii włączona</string>
     <string name="preload_custom_tab">Wstępnie załaduj własną kartę</string>
+    <string name="failed_to_parse">Nie można przeanalizować %1$s</string>
 </resources>
