Updated Turkish translation using Weblate
Currently translated at 100.0% (99 of 99 strings)

Co-authored-by: Oğuz Ersen <oguzersen@protonmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/tr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -98,4 +98,5 @@
     <string name="battery_optimization_disabled">Pil optimizasyonu devre dışı bırakıldı</string>
     <string name="battery_optimization_enabled">Pil optimizasyonu etkinleştirildi</string>
     <string name="preload_custom_tab">Özel sekmeyi önceden yükle</string>
+    <string name="failed_to_parse">%1$s ayrıştırılamadı</string>
 </resources>
