Updated Esperanto translation using Weblate
Currently translated at 78.7% (78 of 99 strings)

Co-authored-by: Jakub Fabijan <animatorzPolski@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/eo/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -54,4 +54,28 @@
     <string name="add_feed">Aldoni fluon</string>
     <string name="title_activity_edit_feed">Aboni fluon</string>
     <string name="action_settings">Agordoj</string>
+    <string name="no_email_client">Ne povis malfermi retpoŝtilon</string>
+    <string name="could_not_load_url">Me povis ŝargi URL-on</string>
+    <string name="navigation_drawer_close">Fermi navigacia bretono</string>
+    <string name="navigation_drawer_open">Malfermi navigacia bretono</string>
+    <string name="mark_items_below_as_read">Marki elementojn malsupre kiel legitaj</string>
+    <string name="mark_items_above_as_read">Marki elementojn supre kiel legitaj</string>
+    <string name="open_feed">Malfermi fluon</string>
+    <string name="sort">Ordigi laŭ</string>
+    <string name="sort_oldest_first">Plej malnovaj unue</string>
+    <string name="sort_newest_first">Plej novaj unue</string>
+    <string name="theme">Etoso</string>
+    <string name="theme_night">Nokta</string>
+    <string name="theme_day">Taga</string>
+    <string name="theme_automatic">Aŭtomate</string>
+    <string name="theme_system">Laŭ operaciumo</string>
+    <string name="open_in_web_view">Malfermi en Web view</string>
+    <string name="open_link_in_web_view">Malfermi ligilon en Web view</string>
+    <string name="reader_settings">Legilo</string>
+    <string name="open_links_with">Malfermi ligilojn per</string>
+    <string name="open_item_by_default_with">Malfermi elementojn defaŭlte per</string>
+    <string name="open_in_custom_tab">Adaptita langeto</string>
+    <string name="open_in_default_browser">Defaŭlta legumilo</string>
+    <string name="no_tag">Sen etikedo</string>
+    <string name="tag">Etikedo</string>
 </resources>
