--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,9 @@
 
   <string name="failed_to_parse">Failed to parse %1$s</string>
 
+  <string name="fetch_full_article">Fetch full article</string>
+  <string name="fetch_full_articles_by_default">Fetch full articles by default</string>
+  <string name="failed_to_fetch_full_article">Failed to fetch full article</string>
+  <string name="fetching_full_article">Fetching full article…</string>
+
 </resources>
